# HSIP-1PHASE-1

./: .gitattributes  .gitignore  .gitleaksignore  ANDROID_BUILD_GUIDE.md  ANTI_SURVEILLANCE_ROADMAP.md  BUILD.md  Cargo.toml  ENCRYPTION_VERIFICATION_REPORT.md  ENTERPRISE-LICENSE.md  FORMAL_VERIFICATION_SUMMARY.md  Funding_Roadmap.md  GETTING_STARTED.md  GOVERNANCE.md  GRADLE_FIX.md  HOW_TO_VERIFY_ENCRYPTION.md  IMPACT.md  LICENSE  LICENSE-NOTICE.md  PORT_TO_PHASE2.ps1  PROPER_PHASE2_FIX.ps1  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_HARDENING_STRATEGY.md  SECURITY_TESTING.md  SUSTAINABILITY.md  VERIFICATION_REPORT.md  WHAT_IS_HSIP.md  WHY_HSIP.md  about.toml  build.rs  consent_request.json  consent_response.json  deny.toml  hsip.toml  hsip_demo.ps1  payload.txt  (+16 more)
.archive/: README.md
.archive/installer-docs/: BUILD_INSTRUCTIONS.md
.archive/internal-docs/: BUILD_INSTALLER.md  TEST_RESULTS_SUMMARY.md  WINDOWS_QUICK_START.md
.archive/phase2-migration/: FIX_PHASE2_BUILD.ps1  FIX_PHASE2_WORKSPACE.ps1
.cargo/: config.toml
.github/workflows/: build-ios.yml  ci.yml  release.yml
android-app/: .gitignore  BUILD_APK.bat  build-apk.sh  build.gradle  fix-gradle.ps1  gradle.properties  settings.gradle
android-app/app/: build.gradle  proguard-rules.pro
browser-extension/: background.js  content.js  manifest.firefox.json  manifest.json  popup.html  popup.js
crates/hsip-auth/: Cargo.toml
crates/hsip-auth/src/: identity.rs  keystore.rs  lib.rs  tokens.rs
crates/hsip-cli/: Cargo.toml  build.rs  hsip-cli.cdx.json  hsip-cli.cdx.xml
crates/hsip-cli/src/: cmd_rep.rs  config.rs  consent_listen.rs  discovery.rs  identity.rs  main.rs  rekey.rs  token.rs
crates/hsip-cli/src/commands/: diag.rs  handshake.rs  mod.rs
crates/hsip-cli/src/daemon/: mod.rs
crates/hsip-common/: Cargo.toml
crates/hsip-common/src/: lib.rs
crates/hsip-common/src/quantum_physics/: decoherence.rs  entanglement.rs  mod.rs  no_cloning.rs  observer_effect.rs  superposition.rs  uncertainty.rs
crates/hsip-core/: Cargo.toml  hsip-core.cdx.json  hsip-core.cdx.xml
crates/hsip-core/src/: aad.rs  consent.rs  error.rs  handshake.rs  hello.rs  identity.rs  keystore.rs  lib.rs  liveness.rs  nonce.rs  pqc.rs  session.rs  session_resumption.rs  verification.rs  wire.rs
crates/hsip-core/src/crypto/: aead.rs  labels.rs  mod.rs  nonce.rs
crates/hsip-core/src/wire/: mod.rs  prefix.rs
crates/hsip-core/tests/: aad_labels.rs  consent_roundtrip.rs  consent_test.rs  nonce_integrity.rs  rfc8439_vectors.rs
crates/hsip-cover/: Cargo.toml
crates/hsip-cover/src/: lib.rs  main.rs
crates/hsip-examples/: Cargo.toml
crates/hsip-gateway/: Cargo.toml
crates/hsip-gateway/src/: classify.rs  (+3 more)
crates/hsip-intercept/: Cargo.toml
crates/hsip-intercept/src/: config.rs  error.rs  event.rs  lib.rs  overlay.rs  patterns.rs  privacy.rs  router.rs
crates/hsip-intercept/src/android/: mod.rs
crates/hsip-intercept/src/windows/: event_monitor.rs  messenger.rs  mod.rs  overlay.rs  utils.rs
crates/hsip-keyboard/: Cargo.toml
crates/hsip-keyboard/src/: crypto.rs  ios_ffi.rs  jni_bridge.rs  lib.rs  message.rs  ratchet.rs  session.rs
crates/hsip-net/: Cargo.toml  hsip-net.cdx.json  hsip-net.cdx.xml
crates/hsip-net/src/: config.rs  consent_cache.rs  guard.rs  handshake_io.rs  hello.rs  lib.rs  udp.rs
crates/hsip-net/tests/: hello_roundtrip.rs
crates/hsip-regenerative/: Cargo.toml
crates/hsip-regenerative/src/: lib.rs
crates/hsip-reputation/: Cargo.toml  hsip-reputation.cdx.json  hsip-reputation.cdx.xml
crates/hsip-reputation/src/: lib.rs  store.rs
crates/hsip-session/: Cargo.toml  hsip-session.cdx.json  hsip-session.cdx.xml
crates/hsip-session/fuzz/: Cargo.toml
crates/hsip-session/fuzz/fuzz_targets/: hsip_session_frame.rs
crates/hsip-session/src/: lib.rs  persistence.rs
crates/hsip-session/src/consent/: mod.rs
crates/hsip-session/src/hello/: mod.rs
crates/hsip-session/tests/: sealed_echo.rs
crates/hsip-telemetry-guard/: Cargo.toml
crates/hsip-telemetry-guard/src/: audit.rs  consent_gate.rs  decisions.rs  flow_meta.rs  guard.rs  known_endpoints.rs  lib.rs  policy.rs  quarantine.rs
crates/hsip-verify/: Cargo.toml  README.md
crates/hsip-verify/examples/: verify_hsip.rs
crates/hsip-verify/src/: counterexample.rs  lib.rs  models.rs  properties.rs
crates/hsip-verify/tests/: verification_tests.rs
docs/: ANDROID_E2E_FLOW.md  ANDROID_IMPLEMENTATION.md  API_REFERENCE.md  CHEAT_SHEET.md  CONTRIBUTING.md  CROSS_PLATFORM_TESTING.md  EXAMPLES.md  HSIP_KEYBOARD.md  HSIP_KEYBOARD_ANDROID.md  INTERCEPT_INTEGRATION.md  INTERCEPT_ROADMAP.md  INTERCEPT_SUMMARY.md  IOS_KEYBOARD_EXTENSION.md  KEYBOARD_UI_IMPLEMENTATION.md  PRIVATE_DM_INTERCEPT.md  PROTOCOL_SPEC.md  SECURITY_README.md  SIDELOAD_DISTRIBUTION.md  THREAT_MODEL.md
examples/: hsip.toml
fuzz/: Cargo.toml
installer/: HSIP Quickstart.cmd  HSIP-Setup.iss  README-USER.txt  RELEASE_NOTES_v0.2.1.md  build-windows-package.ps1  build-with-inno.ps1  hsip-installer.iss  hsip-setup.iss  register-daemon.ps1  register-tray.ps1  run-daemon.ps1  run-demo.cmd  run-hsip.cmd  run-tray.ps1  start-hsip-tray.vbs  update-hsip.ps1
ios-app/: BUILD-IOS.md  ExportOptions.plist  Info.plist  build-ipa.sh
ios-app/KeyboardExtension/: Info.plist  KeyboardViewController.swift
ios-app/MainApp/: ContentView.swift
ios-app/Shared/: HSIPManager.swift
scripts/: demo-listener.bat  demo-sender.bat  listener.bat  package.ps1  sender.bat
security_tests/: README.md  header_injection.py  owasp_auth_bypass.py  owasp_broken_access.py  owasp_crypto_failures.py  owasp_full_suite.py  owasp_injection.py  owasp_integrity_failure.py  owasp_ssrf.py  replay_attack.py  response_tamper.py  run_all_tests.sh  simple_test.ps1  ssl_strip.py  test_hmac_complete.ps1  verify_hmac_protection.ps1  verify_hmac_protection.py  windows_tests.ps1
spec/: 00-overview.md  01-handshake.md  02-wire-format.md  03-consent-and-reputation.md  03-security-analysis.md  README.md
tools/hsip-extension/: background.js  manifest.json  popup.html  popup.js
(+17 files in other folders)
