[workspace]
members = [
    "crates/hsip-core",
    "crates/hsip-session",
    "crates/hsip-net",
    "crates/hsip-reputation",
    "crates/hsip-cli",
    "crates/hsip-auth",
    "crates/hsip-gateway",
    "crates/hsip-intercept",
    "crates/hsip-verify",
    "crates/hsip-common",
    "crates/hsip-regenerative",
]


exclude = [
    "crates/hsip-session/fuzz"
]
resolver = "2"

[workspace.dependencies]
tokio   = "1.39"    
mio     = "0.8.11"
socket2 = "0.5.7"
windows = "0.58.0"
windows-sys = "0.60.2"
windows-targets = "0.53.5"
toolchain = "1.87.0"
