[workspace]
members = [
    "crates/hsip-core",
    "crates/hsip-session",
    "crates/hsip-net",
    "crates/hsip-reputation",
    "crates/hsip-cli",
    "crates/hsip-auth",
    "crates/hsip-gateway",
    "crates/hsip-intercept",
    "crates/hsip-verify",
    "crates/hsip-common",
    "crates/hsip-regenerative",
    "crates/hsip-telemetry-guard",
]


exclude = [
    "crates/hsip-session/fuzz",
    # hsip-verify requires z3-sys which needs Z3 to be built from source
    # On Windows, this can fail due to heap space issues
    # Build separately with: cargo build -p hsip-verify
    "crates/hsip-verify"
]
resolver = "2"

[workspace.dependencies]
tokio   = "1.39"    
mio     = "0.8.11"
socket2 = "0.5.7"
windows = "0.58.0"
windows-sys = "0.60.2"
windows-targets = "0.53.5"
toolchain = "1.87.0"
