[package]
name = "hsip-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"

# crypto
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
dirs = "5"


