[package]
name = "hsip-cli"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"
rust-version = "1.87"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml = "0.8"
winres = "0.1"



# internal crates
hsip-core = { path = "../hsip-core" }
hsip-net = { path = "../hsip-net" }
hsip-reputation = { path = "../hsip-reputation" }
hsip-session = { path = "../hsip-session" }


# crypto/export deps used by main.rs
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
x25519-dalek = "2"

[build-dependencies]
winres = "0.1"

