[package]
name = "hsip-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
ed25519 = "2"          # <-- add this
rand = "0.8"
blake3 = "1"
data-encoding = "2"
hex = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
