[package]
name = "hsip-core"
version = "0.1.2"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.87"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
ed25519 = "2"          # <-- add this
rand = "0.8"
blake3 = "1"
data-encoding = "2"
hex = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }

