[package]
name = "hsip-core"
version = "0.1.2"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.87"

[features]
default = []
pqc = ["pqcrypto-mlkem", "pqcrypto-mldsa", "pqcrypto-traits"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
ed25519 = "2"
rand = "0.8"
blake3 = "1"
data-encoding = "2"
hex = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1.8"

# Post-quantum cryptography (optional, enabled with 'pqc' feature)
# Uses NIST-standardized ML-KEM and ML-DSA (formerly Kyber and Dilithium)
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-mldsa = { version = "0.1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

