[package]
name = "hsip-keyboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["HSIP Contributors"]
description = "HSIP Secure Keyboard - E2E encrypted keyboard for Android"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core HSIP dependencies
hsip-core = { path = "../hsip-core" }
hsip-session = { path = "../hsip-session" }
hsip-auth = { path = "../hsip-auth" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Encoding
base64 = "0.22"

# Logging (for debugging)
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
# JNI bindings
jni = "0.21"

# Android logging
android_logger = "0.14"

[dev-dependencies]
hex = "0.4"
