[package]
name = "hsip-net"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HSIP networking (UDP control plane: HELLO + CONSENT)"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# crypto for signing (already used by HELLO etc.)
ed25519-dalek = { version = "2", features = ["rand_core"] }

# reputation + keystore deps (for listener-side policy)
hsip-core = { path = "../hsip-core" }
hsip-reputation = { path = "../hsip-reputation" }

# env helpers
dirs = "5"

# rate limiting and encryption
rand = "0.8"
hex = "0.4"
chacha20poly1305 = "0.10"

# NEW: used by hello.rs
base64 = "0.22"
