[package]
name = "hsip-net"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "HSIP networking (UDP control plane: HELLO + CONSENT)"
rust-version = "1.87"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = "2"
hsip-session = { path = "../hsip-session" }
sha2 = "0.10"


# crypto for signing (used by HELLO etc.) — keep ONE line only
ed25519-dalek = { version = "2", features = ["rand_core"] }

# reputation + keystore deps (for listener-side policy)
hsip-core = { path = "../hsip-core" }
hsip-reputation = { path = "../hsip-reputation" }

# env helpers
dirs = "5"

# rate limiting and encryption
rand = "0.8"
hex = "0.4"
chacha20poly1305 = "0.10"

# used by hello.rs
base64 = "0.22"
