[package]
name = "hsip-reputation"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "HSIP reputation module: append-only, signed, hash-chained log + scoring"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto + hashing
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# IDs and utils
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
anyhow = "1"

[dev-dependencies]
# (optional) add test helpers here if you write tests
