[package]
name = "hsip-session"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.87"

[dependencies]
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand_core = "0.6"
rand = "0.8"
zeroize = "1.7"
subtle = "2.5"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


