[package]
name = "hsip-verify"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.87"

[dependencies]
z3 = { version = "0.12", features = ["static-link-z3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
data-encoding = "2"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
